--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <img class="flex-containerImgb mediaFotoindex" src="root/assets/img/MAPAMUNDI2.jpg" width="1200" height="400" alt="mapamundi sobre mesa">
 
     
-       <p class="parrafo__Uno">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo cum iusto ab neque eligendi quis alias corrupti ex quo ipsam unde, labore fugiat in nulla maiores fuga est reprehenderit sit! Fugiat quibusdam vel, delectus optio quidem minima animi cupiditate ducimus laborum iusto at soluta, perspiciatis, maxime voluptates. Laborum, doloribus architecto?</p>
+       <p class="parrafo__Uno">¡Bienvenidos a nuestro blog de viajes! Partiendo al encuentro es el principio de un viaje maravilloso, escribiremos en este sitio web como lo haríamos en nuestra diario de viajes, anotando crónicas, consejos de viajes, tips, aventuras increibles y los más triviales datos cotidianos de la vida de una pareja viajera. Es nuestra intencion poder plasmar cada sensación para que la puedas vivir en primera persona, que a través de nuestras palabras puedas tener esas ganas de inmanejables de salir a conocer el mundo, que al igual que nosotros, creemos que tiene muchas cosas maravillosas que brindarnos. 
+           Anhelamos que este medio que nos acerca, sea tu guia para poder ir por tus sueños, vivir los momentos más magicos que hayas podido soñar. ¡Acompañanos!  </p>
    </div>
    <!-- fin de imagen, boton y texto principal -->
 
