--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -89,7 +89,7 @@
             <!-- fin de imagen principal centrada -->
 
             <!-- texto bienvenida -->
-            <p class="parrafo__Uno">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo cum iusto ab neque eligendi quis alias corrupti ex quo ipsam unde, labore fugiat in nulla maiores fuga est reprehenderit sit! Fugiat quibusdam vel, delectus optio quidem minima animi cupiditate ducimus laborum iusto at soluta, perspiciatis, maxime voluptates. Laborum, doloribus architecto?</p>
+            <p class="parrafo__Uno">Estos somos nosotros... Nuestros nombres: Alejandra y Gaston. Nuestras edades 29 y 35 años. Nuestra procedencia: Villa Gesell y Chacabuco (ambos bonaerenses). Nuestros sueño: hacer que la vida valga la pena, con sus cosas buenas y malas, esperimentar lo bueno de este mundo, bellos lugares y personas, hacer amistades en todos los rincones del planeta. Soñamos que de viejitos recordemos cada historia con una mirada de satisfaccion por el camino realizado, nuestra meta es ir por todo lo que la vida nos brinda. </p>
     
             <!-- inicio subtitulo primero -->
     
