--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -101,7 +101,10 @@
     
         <!-- inicio primer parrafo -->
         <div class="parrafos">
-            <p> esteLorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid ducimus recusandae laborum, officia natus quaerat omnis. Unde rem natus nihil libero id minima, corrupti quisquam reprehenderit dolor repellendus autem consectetur?
+            <p> La inquietud no ha llevado lejos, nuestra curiuosidad por conocer cosas nuevas, por disfrutar de     experiencias únicas, somos soñadores, y esos sueños nacen y crecen constantemente. 
+                No queremos sentirnos atrapados dentro de vidas de cartón, esa sensación de sentirse dentro de un frasco esmerilado, sabiendo que mas alla de esas paredes de vidrio difusas hay cosas nuevas que ver, conocer y aprehender. 
+                Hasta aquí nos ha traído el incorformismo, sentirnos, como quizas te sientas vos, que estamos hechos para cosas más grandes, para verdaderas historias escritas con nuestra pluma y nuestra tinta.
+                Infancias complicadas, adolescencias insípidas y una adultez prometedora. Somos los dueños de nuestro destino, forjadores de lo que seremos mañana, y por sobre todo somos quienes intentamos ser con lo aprendido hasta aquí.
             </p>
         </div>
          <!-- fin primer parrafo -->
