--- a/pages/nuestroproyecto.html
+++ b/pages/nuestroproyecto.html
@@ -119,7 +119,7 @@
                 </p>
                 <p>
                 Ciertamente habrá personas que por diversos motivos nos desmotivarán, no entenderán lo que deseamos o simplemente lo desvalorizaran pensandolo ridiculo. Lo unico que tiene que importar es nuestra vision del mundo, como lo concebimos, que es lo que nos parece imprescindible y como queremos afrontar la vida. Porque al fín y al cabo, los unicos que viven nuestra vida somos nosotros, y quienes vamos a estar en un ataud con nuestros logros y nuestros fracasos somos nosotros.
-                Pero quería terminar estas lineas con dos frases de Ernesto Guevara, que mas allá de la valoración política que quién lea estas lineas tenga, fue un pensonaje de la historia que vivió su vida escribiendo su propia historia, hasta el fianal. 
+                Pero quería terminar estas lineas con dos frases de Ernesto Guevara, que mas allá de la valoración política que quién lea estas lineas tenga, fue un pensonaje de la historia que vivió su vida escribiendo su propia historia, hasta el final. 
                 </p>
                 <p>
                 Sueña y serás libre en espíritu, lucha y serás libre en vida. Seamos la pesadilla de los que pretenden arrebatarnos los sueños.
@@ -134,11 +134,9 @@
             </div>
             <!-- comienzo de tercer parte de parrafos -->
             <div  class="nuestroproy__Parrafos mediaParrafosnuestroproy">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque tempora aspernatur at quod nisi ut velit impedit blanditiis minima? Repellat obcaecati soluta temporibus ducimus culpa! Harum ullam ea aliquam ipsa.
-                Aut, maxime veritatis. Nulla alias aspernatur id necessitatibus veniam ullam explicabo pariatur ab eius nesciunt placeat perferendis molestiae deserunt delectus unde in distinctio esse tempora quis, voluptatum eveniet vero quas.
-                Dicta fuga facilis eveniet saepe ipsam, iusto sint aspernatur corporis ducimus doloremque error! Tempore sequi molestias modi! Quasi consectetur illum iste! Ipsa nesciunt voluptates delectus odit expedita sapiente asperiores consectetur?
-                Alias voluptatum inventore, tenetur nesciunt porro quibusdam debitis. Aut ullam praesentium illum ducimus ad, saepe sequi sint dicta iste ipsam rem et non expedita eligendi iure. Aut rerum dolore aliquam?
-                Laboriosam in dolorum esse libero atque cumque blanditiis, sed voluptatem accusantium dolore aperiam fugit consequatur omnis impedit. Nihil odio reiciendis fugiat! Facere animi nemo esse aspernatur error at rerum dolorem?</p>
+                <p>
+                Concebimos un poco el plan de viajar como un plan sin plan, como nuestro amigo español que era un tronco en el río. Tratando de siempre dar nuestro mejor esfuerzo para lograr crecer en la situacion en la que nos encontremos, tratando de ser responsables pero tambien relajados, vivir sin prisa pero sin pausa. Y en este plan que tenemos, hay algo es que fijo, inamovible, inmutable. Tener nuestro propio bodegón para agasajar a viajeros con platos de nuestra tierra; pero tambien de los paises que visitamos. Sería algo así como vivir eternamente de viaje, hospedando viajeros, escuchando sus historias y brindando lo mejor de nosotros, la hospitalidad.
+                </p>
             </div>
             
             <!-- mapa incrustado que refleja una parte de cordoba -->
