--- a/pages/estuvimos-en.html
+++ b/pages/estuvimos-en.html
@@ -165,7 +165,7 @@
                         </p>
                         <p class="estuvimosen__Parrafos mediaParrafosestuvimosen">
                             Siempre ser flexible con respecto a los días y horarios que vas a abordar un avión o un colectivo te ahorra dinero, por lo que evitar viajar en temporada alta o en fechas festivas nos va a dejar mas dinerillo para otras cosas, como alojamiento y comida.
-                            Casi siempre los vuelos con escalas suelen ser más económicos que los directos, pero cada tanto la vida trae sorpresas y los vuelos directos se encuentran a muy buen precio viendo paginas con anticipacion. El secreto es ir viendo con tiempo las paginas que aquí les dejamos y cuando sea el momento justo van a encontrar vuelos al precio deseado
+                            Casi siempre los vuelos con escalas suelen ser más económicos que los directos, pero cada tanto la vida trae sorpresas y los vuelos directos se encuentran a muy buen precio viendo paginas con anticipacion. El secreto es ir viendo con tiempo las paginas que aquí les dejamos y cuando sea el momento justo van a encontrar vuelos al precio deseado.
                         </p>
                     
                     
