--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -81,11 +81,9 @@
 
                    <!-- primer parrafo -->
                    <div  class="parrafo__Uno mediaparrafos__Gastronomia">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, quidem. Quibusdam ad magni laudantium asperiores, possimus tempora facilis expedita iusto? Est explicabo eum nesciunt exercitationem reprehenderit beatae, error eius similique.
-                    Aperiam sint quas quibusdam officia provident consectetur voluptates iure, dolorem quia dolor autem sapiente iste veniam ut omnis nostrum asperiores nulla unde cum quo. Sit vitae quidem obcaecati dolore assumenda?
-                    Vitae nisi ipsum officia adipisci illum, neque voluptatum sequi? Sapiente excepturi atque corrupti nostrum aut, odio reiciendis velit quasi id laborum doloribus, adipisci sunt maxime voluptatum nam iure a quod?
-                    Voluptatum voluptates porro aliquid distinctio corporis recusandae eos, quidem sed corrupti ab id nihil voluptatibus maxime in fugit beatae aut, repellendus at veritatis autem. Modi molestias voluptate illum quae velit.
-                    Harum assumenda, nisi recusandae laudantium, ipsa asperiores eius blanditiis est illo eaque itaque, debitis tempore! Inventore fugit velit, itaque dignissimos aliquid suscipit commodi laudantium veritatis ipsa, mollitia molestias tempora voluptas!</p>
+                    <p>En esta sección queremos dejarles buenas recetas que vamos recolectando por los lugares que visitamos, siguiendo nuestro proyecto, el de poner un bodegón en alguna parte del mundo o en Córdoba, Argentina, es que vamos a ir armando un super recetario viajero que compartiremos con ustedes.
+                    Una opción que nos gustaría mucho, y a eso los invitamos, es que nos dejen la receta que más rica hagan, y que significa algo personal o sentimental para ustedes. La receta familiar, o el secreto de la abuela que tienen muy bien guardado será bien recibido aquí, y lo compartiremos con quienes lean estas paginas.
+                    </p>
                 </div>
 
 
