rama entrega-final

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,9 +16,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- HOJA DE ESTILO CSS -->
     <link rel="stylesheet" href="../css/main.css">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="../root/assets/img/combi favicon.ico" type="image/x-icon">
 </head>
 </head>
-<body id="grad">
+<body id="grad" class="over">
  
 <!-- comienzo encabezado, header menu de navegacion y demas. Esta replicado del index y se le añadio el inicio para volver a la pagina principal -->
 <header class="headerContainer mediaHeader">
@@ -76,8 +78,8 @@
             <h1 class="contacto__Titulo">Contacto</h1>
         </div>
                     <!-- parrafo de formulario de contacto -->
-        <div class="parrafo mediaparrafos__Contacto">
-            <p>Antes que nada, gracias por querer contactarte con nosotros. Nos gusta cuando la gente que nos lee se comunica y rompe con el hechizo de la pantalla, y por eso leemos con atención cada mensaje. Sin embargo, y sobre todo cuando esamos de viaje, no podemos comprometernos a responder a todos los mails. Pesimoa disculpas por eso, pero el estado general de nuestra bandeja de entrada es siempre de inundación, y no nos da el tiempo para cumplir con todo. Mientras más breve el correo, más chances de que respondamos rápido 🙂</p>
+        <div class="parrafo mediaparrafos__Contacto texto">
+            <p>Antes que nada, gracias por querer contactarte con nosotros. Nos gusta cuando la gente que nos lee se comunica y rompe con el hechizo de la pantalla, y por eso leemos con atención cada mensaje. Sin embargo, y sobre todo cuando estamos de viaje, no podemos comprometernos a responder a todos los mails. Pedimos disculpas por eso, pero el estado general de nuestra bandeja de entrada es siempre de inundación, y no nos da el tiempo para cumplir con todo. Mientras más breve el correo, más chances de que respondamos rápido 🙂</p>
         </div>
         
         
@@ -191,12 +193,13 @@
 
 <!-- fin de barra de navegacion-->
   
-    <!-- inicio logos redes sociales -->
-    <div class="footer__redes">
-        <a title="instagram" href="https://www.instagram.com/viajeroscom/?hl=es"><img src="../root/assets/img/icono insta claro.png" width="40" height="40" alt="link instagram" /></a>
-        <a title="facebook" href="https://www.facebook.com/viajerosweb/"><img src="../root/assets/img/icono facebook claro.jpg" width="40" height="40" alt="link link facebook" /></a>
-    </div>  
-    <!-- fin de logos redes sociales -->
+<!-- inicio logos redes sociales -->
+<div class="footer__redes">
+    <a title="instagram" href="https://www.instagram.com/viajeroscom/?hl=es"><img src="../root/assets/img/icono insta claro.png" class="image" width="60" height="60" alt="link instagram" /></a>
+    <a title="youtube" href="https://www.youtube.com/"><img src="../root/assets/img/icono youtube beige.png" class="image" width="60" height="60" alt="link youtube" /></a>
+    <a title="facebook" href="https://www.facebook.com/viajerosweb/"><img src="../root/assets/img/icono facebook claro.jpg" class="image" width="60" height="60" alt="link link facebook" /></a>
+</div>  
+<!-- fin de logos redes sociales -->
    
     <!-- fin de footer -->
 <h3 class="footer__webdesing">
