--- a/pages/estuvimos-en.html
+++ b/pages/estuvimos-en.html
@@ -15,10 +15,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Praise&family=Roboto:wght@700&family=Yuji+Syuku&display=swap" rel="stylesheet"> 
+<!-- FAVICON -->
+<link rel="shortcut icon" href="../root/assets/img/combi favicon.ico" type="image/x-icon">
 
     <title>Estuvimos en Partiendo al encuentro-Blog de viajes</title>
 </head>
-<body id="grad">
+<body id="grad" class="over">
 
    <!-- comienzo encabezado, header menu de navegacion y demas. Esta replicado del index y se le añadio el inicio para volver a la pagina principal -->
 <header class="headerContainer mediaHeader">
@@ -80,10 +82,12 @@
                         <img class="mediaFoto__estuvimosen"  src="../root/assets/img/niños pescando.jpg" width="1000" height="500" alt="niños pescando"/>
 
                         <!-- texto bienvenida -->
-            <p class="parrafo__Uno">La mejor experiencia vivida hasta el momento por mi (Gastón) fue realizar el Camino de Santiago, el laruta a pie que une San Jean Pie de Port con Santiago de Compostela. Inicie mi viaje desde Bienos Aires llegando a Madrid. En madrid me esperaba Jota, un amigo español que habia conocido en Buenos Aires y Nicole, una Italiana del sur que conoci en un Hostel en Santiago de Chile.
-            Esa fue, por cuestiones espirituales, colectivas y conexión con la naturaleza una experiencia muy fuerte. Renovadora, donde el resultado final fue una satisfaccion personal muy grande y nuevas preguntas hacia mi forma de ser, de vivir y lo que quiero hacer.
-            En el apartado Continentes de nuestro home y en la seccion historias, vamos a ir subiendo relatos sobre nuestros viajes e informacion de interés.
-            </p>
+            <div class="parrafo__Uno">
+                <p>La mejor experiencia vivida hasta el momento por mi (Gastón) fue realizar el Camino de Santiago, el laruta a pie que une San Jean Pie de Port con Santiago de Compostela. Inicie mi viaje desde Bienos Aires llegando a Madrid. En madrid me esperaba Jota, un amigo español que habia conocido en Buenos Aires y Nicole, una Italiana del sur que conoci en un Hostel en Santiago de Chile.
+                Esa fue, por cuestiones espirituales, colectivas y conexión con la naturaleza una experiencia muy fuerte. Renovadora, donde el resultado final fue una satisfaccion personal muy grande y nuevas preguntas hacia mi forma de ser, de vivir y lo que quiero hacer.
+                En el apartado Continentes de nuestro home y en la seccion historias, vamos a ir subiendo relatos sobre nuestros viajes e informacion de interés.
+                </p>
+            </div>
                     
                         <h1 class="estuvimosen__Titulo mediaTitulo__estuvimosen">Estuvimos en varios países y queremos contarte nuestras experiencias</h1>
                     
@@ -295,12 +299,13 @@
 
 <!-- fin de barra de navegacion-->
   
-    <!-- inicio logos redes sociales -->
-    <div class="footer__redes">
-        <a title="instagram" href="https://www.instagram.com/viajeroscom/?hl=es"><img src="../root/assets/img/icono insta claro.png" width="40" height="40" alt="link instagram" /></a>
-        <a title="facebook" href="https://www.facebook.com/viajerosweb/"><img src="../root/assets/img/icono facebook claro.jpg" width="40" height="40" alt="link link facebook" /></a>
-    </div>  
-    <!-- fin de logos redes sociales -->
+<!-- inicio logos redes sociales -->
+<div class="footer__redes">
+    <a title="instagram" href="https://www.instagram.com/viajeroscom/?hl=es"><img src="../root/assets/img/icono insta claro.png" class="image" width="60" height="60" alt="link instagram" /></a>
+    <a title="youtube" href="https://www.youtube.com/"><img src="../root/assets/img/icono youtube beige.png" class="image" width="60" height="60" alt="link youtube" /></a>
+    <a title="facebook" href="https://www.facebook.com/viajerosweb/"><img src="../root/assets/img/icono facebook claro.jpg" class="image" width="60" height="60" alt="link link facebook" /></a>
+</div>  
+<!-- fin de logos redes sociales -->
    
     <!-- fin de footer -->
 <h3 class="footer__webdesing">
