--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -13,11 +13,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Praise&family=Roboto:wght@700&family=Yuji+Syuku&display=swap" rel="stylesheet">
     <!-- HOJA DE ESTILO BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="../root/assets/img/combi favicon.ico" type="image/x-icon">
 <!-- HOJA DE ESTILO CSS --> 
     <link rel="stylesheet" href="../css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="img/descarga.ico"/>
 </head>
-<body id="grad">
+<body id="grad" class="over">
  
 <!-- comienzo encabezado, header menu de navegacion y demas. Esta replicado del index y se le añadio el inicio para volver a la pagina principal -->
 <header class="headerContainer mediaHeader">
@@ -202,12 +204,13 @@
 
 <!-- fin de barra de navegacion-->
   
-    <!-- inicio logos redes sociales -->
-    <div class="footer__redes">
-        <a title="instagram" href="https://www.instagram.com/viajeroscom/?hl=es"><img src="../root/assets/img/icono insta claro.png" width="40" height="40" alt="link instagram" /></a>
-        <a title="facebook" href="https://www.facebook.com/viajerosweb/"><img src="../root/assets/img/icono facebook claro.jpg" width="40" height="40" alt="link link facebook" /></a>
-    </div>  
-    <!-- fin de logos redes sociales -->
+<!-- inicio logos redes sociales -->
+<div class="footer__redes">
+    <a title="instagram" href="https://www.instagram.com/viajeroscom/?hl=es"><img src="../root/assets/img/icono insta claro.png" class="image" width="60" height="60" alt="link instagram" /></a>
+    <a title="youtube" href="https://www.youtube.com/"><img src="../root/assets/img/icono youtube beige.png" class="image" width="60" height="60" alt="link youtube" /></a>
+    <a title="facebook" href="https://www.facebook.com/viajerosweb/"><img src="../root/assets/img/icono facebook claro.jpg" class="image" width="60" height="60" alt="link link facebook" /></a>
+</div>  
+<!-- fin de logos redes sociales -->
    
     <!-- fin de footer -->
 <h3 class="footer__webdesing">
