--- a/pages/nuestroproyecto.html
+++ b/pages/nuestroproyecto.html
@@ -20,7 +20,7 @@
     <title>Nuestro proyecto Partiendo al encuentro. Blog de viajes y gastronomia</title>
     
 </head>
-<body id="grad" class="over">
+<body id="grad" class="mediaindex">
 
 <!-- comienzo encabezado, header menu de navegacion y demas. Esta replicado del index y se le añadio el inicio para volver a la pagina principal -->
 <header class="headerContainer mediaHeader">
