--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" type="image/jpg" href="img/descarga.ico"/>
     
 </head>
-<body id="grad" class="over">
+<body id="grad">
  
 <!-- comienzo encabezado, header menu de navegacion y demas. Esta replicado del index y se le añadio el inicio para volver a la pagina principal -->
 <header class="headerContainer mediaHeader">
