--- a/pages/nuestroproyecto.html
+++ b/pages/nuestroproyecto.html
@@ -94,7 +94,7 @@
             
             <!-- comienzo de primera parte de parrafos  -->
             <div class="parrafo__Uno">
-                <p>
+                <p class="mediaParrafosnuestroproy">
                     En esta normalidad donde la pandemia del coronavirus lo cambio todo, no nos sentimos ajenos a esta inmensa bruma que todo lo cubre, volviendo inciertos nuestros caminos. Es por eso que en medio de todo este lio, nos fuimos pensando como individuos y como pareja, repensando nuestro estilo de vida y tambien nuestros sueños y proyectos.
                     Cuando nos conocimos con la vasca, dijimos que queriamos viajar, que queriamos quizas un cambio de vida. Los dos en ese momento viviamos en Buenos Aires, luego de un lapso en el cual viví casi un año en Tierra del Fuego, volvia de un viaje de 45 dias por España, tiempo en el que hice el <a class="text-dark" href="https://www.gronze.com camino-frances">Camino de Santiago (frances)</a>, una experiencia que realmente modifico mi perspectiva de la vida, de lo indispensable, lo necesario y lo prescindible. Son de esas experiencias que no son catalogadas con un viaje turistico, sino un viaje interno donde algo se modifica.
                     Este Camino de Santiago, puede comenzar su peregrinacion por los caminos de Roncesvalles Fontera con francia del lado Español, o Saint Jean Pied de Port, dle lado frances. Es un camino que cruza ríos, sierras, verdes praderas, pueblos historicos y la mejor compañía de caminantes que buscan respuestas, o nuevas preguntas (como fue mi caso).
