--- a/pages/estuvimos-en.html
+++ b/pages/estuvimos-en.html
@@ -20,7 +20,7 @@
 
     <title>Estuvimos en Partiendo al encuentro-Blog de viajes</title>
 </head>
-<body id="grad" class="over">
+<body id="grad">
 
    <!-- comienzo encabezado, header menu de navegacion y demas. Esta replicado del index y se le añadio el inicio para volver a la pagina principal -->
 <header class="headerContainer mediaHeader">
