--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="../root/assets/img/combi favicon.ico" type="image/x-icon">
 </head>
 </head>
-<body id="grad" class="over">
+<body id="grad">
  
 <!-- comienzo encabezado, header menu de navegacion y demas. Esta replicado del index y se le añadio el inicio para volver a la pagina principal -->
 <header class="headerContainer mediaHeader">
