--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="img/descarga.ico"/>
 </head>
-<body id="grad" class="over">
+<body id="grad">
  
 <!-- comienzo encabezado, header menu de navegacion y demas. Esta replicado del index y se le añadio el inicio para volver a la pagina principal -->
 <header class="headerContainer mediaHeader">
