correccion logo combi gastronomia

--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -34,7 +34,7 @@
     </div>
 
     <div>
-        <a href="index.html"><img class="headerLogodos" src="../root/assets/img/imagen combi sin fondo.png" alt="dibujo combi"></a>
+        <a href="../index.html"><img class="headerLogodos" src="../root/assets/img/imagen combi sin fondo.png" alt="dibujo combi"></a>
 
     </div>
         
