correccion descripcion contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En este apartado queremos que te pongas en contacto con nosotros, te dejamos nuestras redes sociales, facebook e instagran para que vayas enterandote de todas las novedades viajeras">
+    <meta name="description" content="Este es un sitio que brinda informacion sobre viajes, consejos y tips para viajar bueno, bonito y barato. Contactate con nosotros para que te aconjsejemos cuando y como viajar para tener una gran experiencia a un gran precio">
    <meta name="keywords"  content="CONTACTO, REDES SOCIALES, ESCRIBIR, LEER, VIAJAR, ESTAR CERCA">
     <title>Contacto Partiendo al encuentro. Blog de viajes y gastronomia</title>
     <link rel="shortcut icon" type="image/jpg" href="img/descarga.ico"/>
